--- a/src/components/templates/Header/styles/style.module.scss
+++ b/src/components/templates/Header/styles/style.module.scss
@@ -1,5 +1,13 @@
 .container {
+    position: absolute;
     width: 100%;
-    height: 10vh;
-    border: 1px solid gray
+    padding: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .navigation {
+        display: flex;
+        gap: 12px;
+    }
 }
