--- a/src/pages/styles/globals/variables.scss
+++ b/src/pages/styles/globals/variables.scss
@@ -38,4 +38,5 @@ $xxl-width: 1320px;
 
 // 色の設定
 $bg-light-color: #ffffff;
-$bg-light-color: #eeeeee;
+$bg-dark-color: #eeeeee;
+$text-color: #555555;
