--- a/src/pages/styles/globals/variables.scss
+++ b/src/pages/styles/globals/variables.scss
@@ -38,5 +38,9 @@ $xxl-width: 1320px;
 
 // 色の設定
 $bg-light-color: #ffffff;
-$bg-dark-color: #eeeeee;
+$bg-dark-color: #777777;
+$bg-light-dark-color: #eeeeee;
+$bg-footer-color: #555555;
 $text-color: #555555;
+$text-white-color: #ffffff;
+$title-font-family: 'Lobster', cursive;
