--- a/src/components/containers/Footer/styles/style.module.scss
+++ b/src/components/containers/Footer/styles/style.module.scss
@@ -1,5 +1,5 @@
 .container {
     width: 100%;
-    height: 30vh;
-    border: 1px solid gray
+    min-height: 20vh;
+    background: $bg-footer-color;
 }
