--- a/src/components/templates/Header/styles/style.module.scss
+++ b/src/components/templates/Header/styles/style.module.scss
@@ -4,14 +4,19 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    font-family: $title-font-family;
 
     @include lg() {
         justify-content: center;
     }
 
     .logo {
-        font-size: 40px;
+        font-size: 52px;
         cursor: pointer;
+
+        @include lg() {
+            font-size: 40px;
+        }
     }
 
     .navigation {
@@ -23,7 +28,7 @@
         }
 
         li {
-            font-size: 24px;
+            font-size: 32px;
             cursor: pointer;
         }
     }
