--- a/src/components/templates/Header/styles/style.module.scss
+++ b/src/components/templates/Header/styles/style.module.scss
@@ -4,18 +4,22 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-family: $title-font-family;
+    color: $title-text-color;
 
     @include lg() {
         justify-content: center;
     }
 
     .logo {
-        font-size: 52px;
+        font-size: 60px;
         cursor: pointer;
 
+        &:hover {
+            opacity: 0.7;
+        }
+
         @include lg() {
-            font-size: 40px;
+            font-size: 60px;
         }
     }
 
@@ -28,8 +32,12 @@
         }
 
         li {
-            font-size: 32px;
+            font-size: 40px;
             cursor: pointer;
+
+            &:hover {
+                opacity: 0.7;
+            }
         }
     }
 }
