--- a/src/pages/styles/globals/variables.scss
+++ b/src/pages/styles/globals/variables.scss
@@ -38,9 +38,8 @@ $xxl-width: 1320px;
 
 // 色の設定
 $bg-light-color: #ffffff;
-$bg-dark-color: #777777;
-$bg-light-dark-color: #eeeeee;
-$bg-footer-color: #555555;
+$bg-dark-color: #81d4fa;
+$bg-footer-color: #81d4fa;
 $text-color: #555555;
 $text-white-color: #ffffff;
-$title-font-family: 'Lobster', cursive;
+$title-text-color: #29b6f6;
