--- a/src/components/containers/Section/styles/style.module.scss
+++ b/src/components/containers/Section/styles/style.module.scss
@@ -23,6 +23,7 @@
             font-size: 52px;
             text-align: center;
             padding: 28px;
+            font-family: $title-font-family;
 
             &.dark {
                 color: $text-white-color;
