--- a/src/pages/styles/globals/variables.scss
+++ b/src/pages/styles/globals/variables.scss
@@ -43,3 +43,4 @@ $bg-footer-color: #81d4fa;
 $text-color: #555555;
 $text-white-color: #ffffff;
 $title-text-color: #29b6f6;
+$title-font-family: 'Caveat', cursive;
