--- a/src/pages/styles/globals/variables.scss
+++ b/src/pages/styles/globals/variables.scss
@@ -39,8 +39,9 @@ $xxl-width: 1320px;
 // 色の設定
 $bg-light-color: #ffffff;
 $bg-dark-color: #81d4fa;
-$bg-footer-color: #81d4fa;
+$bg-footer-color: #29b6f6;
 $text-color: #555555;
 $text-white-color: #ffffff;
 $title-text-color: #29b6f6;
-$title-font-family: 'Caveat', cursive;
+$accent-color: #FF80AB;
+$title-font-family: 'Caveat', 'hannari';
