--- a/src/components/containers/Main/styles/style.module.scss
+++ b/src/components/containers/Main/styles/style.module.scss
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100vh;
     padding: 40px 80px;
+    background: $bg-light-color;
 
     @include lg() {
         padding: 0 0 50px 0;
