--- a/src/pages/styles/globals/variables.scss
+++ b/src/pages/styles/globals/variables.scss
@@ -37,7 +37,7 @@ $xxl-width: 1320px;
 }
 
 // 色の設定
-$bg-light-color: #f8f8f0;
+$bg-light-color: #ffffff;
 $bg-dark-color: #81d4fa;
 $bg-footer-color: #29b6f6;
 $text-color: #555555;
