--- a/src/pages/styles/Home.module.scss
+++ b/src/pages/styles/Home.module.scss
@@ -25,7 +25,6 @@
                 padding-top: 160px;
                 font-size: 18px;
             }
-
         }
 
         .image {
@@ -57,17 +56,14 @@
             }
 
             tbody {
-
                 tr {
-
                     th {
                         line-height: 80px;
                         text-align: left;
-                        width: 150px
+                        width: 150px;
                     }
                 }
             }
         }
     }
-
 }
