--- a/src/pages/styles/globals/variables.scss
+++ b/src/pages/styles/globals/variables.scss
@@ -43,5 +43,5 @@ $bg-footer-color: #29b6f6;
 $text-color: #555555;
 $text-white-color: #ffffff;
 $title-text-color: #29b6f6;
-$accent-color: #FF80AB;
+$accent-color: #ff80ab;
 $title-font-family: 'Caveat', 'hannari';
