--- a/src/pages/styles/globals/variables.scss
+++ b/src/pages/styles/globals/variables.scss
@@ -39,6 +39,7 @@ $xxl-width: 1320px;
 // 色の設定
 $bg-light-color: #ffffff;
 $bg-dark-color: #81d4fa;
+$bg-main-color: #fcfbf0;
 $bg-footer-color: #29b6f6;
 $text-color: #555555;
 $text-white-color: #ffffff;
