--- a/src/components/containers/Main/styles/style.module.scss
+++ b/src/components/containers/Main/styles/style.module.scss
@@ -33,7 +33,18 @@
                 text-align: center;
                 height: auto;
                 padding-top: 160px;
-                font-size: 18px;
+                font-size: 24px;
+            }
+
+            .sentenceWrapper {
+
+                .sm {
+                    display: none;
+
+                    @include sm() {
+                        display: block;
+                    }
+                }
             }
         }
 
@@ -49,16 +60,6 @@
                 display: block;
                 text-align: center;
                 margin-top: 40px;
-            }
-
-            .imageWrapper {
-                background: $bg-light-color;
-                width: 600px;
-                height: 600px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                border-radius: 50%;
             }
         }
     }
