--- a/src/pages/styles/Home.module.scss
+++ b/src/pages/styles/Home.module.scss
@@ -22,6 +22,59 @@
         }
     }
 
+    .serviceContainer {
+        display: flex;
+        width: 100%;
+        text-align: center;
+
+        @include lg() {
+            display: block;
+        }
+
+        .serviceContainerWrapper {
+            width: 50%;
+            display: flex;
+            justify-content: center;
+
+            @include lg() {
+                width: 100%;
+            }
+
+            .title {
+                font-size: 40px;
+                font-family: $title-font-family;
+                margin-bottom: 24px;
+            }
+
+            .content {
+                min-height: 200px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-size: 20px;
+
+                .imageContainer {
+                    padding: 24px;
+                    position: relative;
+                    width: 600px;
+                    height: 200px;
+
+
+                    @include sm() {
+                        width: 300px;
+                        height: 120px;
+                    }
+                }
+            }
+
+            &.blog {
+                @include lg() {
+                    margin-bottom: 40px;
+                }
+            }
+        }
+    }
+
     .companyContainer {
         @include sm() {
             padding: 12px
