serviceのデザインを修正

--- a/src/pages/styles/Home.module.scss
+++ b/src/pages/styles/Home.module.scss
@@ -58,7 +58,7 @@
                     position: relative;
                     width: 600px;
                     height: 200px;
-
+                    margin-bottom: 20px;
 
                     @include sm() {
                         width: 300px;
